# MICUCODELINE

./: .gitignore  Cargo.toml  README.md  WINDOWS_USER_GUIDE.md  cliff.toml  debug-postinstall.js  test-postinstall.js
.github/workflows/: ci.yml  release.yml
npm-publish/main/: package.json
npm/main/: README.md  package.json
npm/main/scripts/: postinstall.js
npm/scripts/: prepare-packages.js
src/: cli.rs  lib.rs  main.rs  updater.rs
src/api/: cache.rs  client.rs  mod.rs
src/config/: balance_config.rs  loader.rs  mod.rs  models.rs  types.rs
src/core/: statusline.rs
src/core/segments/: balance.rs  branding.rs  group.rs  mod.rs  usage.rs
src/ui/: app.rs  balance_setup.rs  main_menu.rs  mod.rs
src/ui/components/: preview.rs  segment_list.rs  settings.rs
src/ui/themes/: presets.rs  theme_cometix.rs  theme_default.rs  theme_gruvbox.rs  theme_minimal.rs  theme_nord.rs  theme_powerline_dark.rs  theme_powerline_light.rs  theme_powerline_rose_pine.rs  theme_powerline_tokyo_night.rs
src/utils/: mod.rs
